// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`updateAppModule should add imports of spartacus modules to app.module.ts 1`] = `
"
import { NgModule } from '@angular/core';
import { AppRoutingModule } from "@spartacus/storefront";

@NgModule({
  imports: [AppRoutingModule]
})
export class AppModule { }
"
`;

exports[`updateAppModule should add imports of spartacus modules to app.module.ts with customizations 1`] = `
"
import { NgModule } from '@angular/core';
import { AppRoutingModule } from "@spartacus/storefront";

@NgModule({
  imports: [
    SomeCustomModule,
    AppRoutingModule
  ],
  providers: [
    someCustomProvider
  ]
})
export class AppModule { }
"
`;
